[tool.poetry]
name = "auros-dash"
version = "0.1.0"
description = ""
authors = ["Charlie You <charlie@castle.finance>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15.1"
requests = "^2.28.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
